Initial commit for solution

--- a/app/views/auth/index.html
+++ b/app/views/auth/index.html
@@ -13,6 +13,14 @@
                 <a href="/authBasic/logout" class="btn btn-primary btn-lg active">Logout</a>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2>Authentification Digest</h2>
+                <a href="/authDigest/login" class="btn btn-primary btn-lg active">Login</a>
+                <a href="/authDigest/logout" class="btn btn-primary btn-lg active">Logout</a>
+            </div>
+        </div>
     </div>
 </section>
 {% endblock %}
