--- a/app/views/user/edit.html
+++ b/app/views/user/edit.html
@@ -8,7 +8,7 @@
 		<div class="row">
 			<div class="col-lg-8 mx-auto">
 				<h2>Edition d'un utilisateur</h2>
-				<form method="POST">
+				<form method="post">
 					<div class="form-group">
 						<label for="user_id">ID</label>
 						<input type="text" class="form-control" id="user_id" name="user[id]" readonly="readonly"
