Add view files for Auth Form

--- a/app/views/authForm/login.html
+++ b/app/views/authForm/login.html
@@ -15,7 +15,7 @@
                             placeholder="Adresse email" value="">
                     </div>
                     <div class="form-group">
-                        <label for="user_password">Mot de passe</label>
+                        <label for="user_password">Mot de passe :</label>
                         <input type="password" class="form-control" id="user_password" name="user[password]"
                             placeholder="Mot de passe" value="">
                     </div>
